--- a/app/globals.css
+++ b/app/globals.css
@@ -58,9 +58,10 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: -1px;
+    z-index: 5;
+    bottom: -42px;
     height: 84px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .7) 60%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
     pointer-events: none;
   }
 }
